versions/1.2.0/_sources/api/generated/metawards.Network.rst.txt
metawards.Network
=================

.. currentmodule:: metawards

.. autoclass:: Network

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Network.__init__
      ~Network.assert_sane
      ~Network.build
      ~Network.copy
      ~Network.get_min_max_distances
      ~Network.get_node_index
      ~Network.get_work_index
      ~Network.has_different_work_matrix
      ~Network.initialise_infections
      ~Network.move_from_play_to_work
      ~Network.recalculate_denominators
      ~Network.rescale_play_matrix
      ~Network.reset_everything
      ~Network.run
      ~Network.scale_susceptibles
      ~Network.single
      ~Network.specialise
      ~Network.update
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Network.info
      ~Network.links
      ~Network.max_links
      ~Network.max_nodes
      ~Network.name
      ~Network.nlinks
      ~Network.nnodes
      ~Network.nodes
      ~Network.nplay
      ~Network.params
      ~Network.play
      ~Network.play_population
      ~Network.population
      ~Network.to_seed
      ~Network.work_population
   
   